# SimpleCNN

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: convertData.h  layer.h  model.h
libraries/armadillo-12.8.4/: CMakeLists.txt  docs.html
src/: convertData.cpp  convertData.h  driver.cpp  layer.cpp
